🚧 まだシーケンスが削除されない
